2004-02-27 14:14  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h: fix for bug #906011 "include/ns.h version not
	  bumped"

2004-02-26 14:37  Dossy Shiobara <dossy@panoptic.com>

	* nsd/unix.c: uid_t is supposed to be unsigned, but apparently
	  isn't on OSX, apparently.

2004-02-19 13:22  Dossy Shiobara <dossy@panoptic.com>

	* nsdb/: dbinit.c, dbtcl.c: fix "ns_db gethandle -timeout" so that
	  when timeout < 0 it blocks forever, timeout == 0 is poll, and
	  timeout > 0 times out after timeout seconds

2004-02-18 11:35  Dossy Shiobara <dossy@panoptic.com>

	* nsperm/nsperm.c: fixed bug #899364, restoring old nsperm
	  functionality as it was in 3.x.

2003-11-23  mpagenva <mpagenva@aol.com>
        * nsd/tclhttp.c: remove validity check on method param to ns_http 
          queue, since methods in addition to put and post can be valid.
        * tcl/fastpath.tcl: make configuable: a) logging to serverlog
          fastpath update requests (some configs may be fine with the
          logging to the access log which can be easily obtained).
          b) automatic backfill of implied directory tree on put.

2003-11-19  pkhincha <pkhincha@aol.com>
        * maxinput to throttle the # of bytes
        * on request.  
        * Removed ThreadJoin of driver thread.

2003-11-03  pkhincha <pkhincha@aol.com>

	* nsd/urlspace.c: removed initing of mutex
	* nsd/nsmain.c: calling NsWaitDriversShutdown

2003-11-01  Zoran Vasiljevic <zv@archiware.com>

	* tcl/file.tcl: fixed broken argument convention for the
	unused argument of ns_sourceproc.

2003-10-28  Zoran Vasiljevic <zv@archiware.com>

	* nsd/tclatclose.c: fixed typo in command usage text

2003-10-09  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_20
        * doc/ns_job.n:
        * tests/api/ns_job.adp:
        * nsd/tcljob.c: Change timeout specification to be ns_time
        based.
	
2003-10-21  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/init.tcl: Removing lazyproc code from 4.0 to enable it